# Noetiq

./: README.md  package-lock.json  package.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ChangePasswordDialog.tsx  ConfirmVaultDeleteDialog.tsx  CustomDialog.tsx  CustomDialogNoClose.tsx  Editor.tsx  EmojiPicker.tsx  LoginDialog.tsx  LoginView.tsx  MainView.tsx  ModalPortal.tsx  NewVaultDialog.tsx  Note.tsx  NoteIndex.tsx  NoteOptionsDialog.tsx  NotesBar.tsx  OptionsBar.tsx  OptionsDialog.tsx  PasswordContext.tsx  SetPasswordView.tsx  SettingsContext.tsx  Tool.ts  VaultItem.tsx  VaultOpen.tsx  VaultOptionsDialog.tsx  interfaces.ts  types.ts
src/styles/: editor.css
src/types/: external-modules.d.ts
