[package]
name = "noetiq"
version = "0.1.0"
description = "Multiplatform encryptyed note-taking app with block-style editor"
authors = ["iBManu"]
edition = "2021"

[lib]
name = "noetiq_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
dirs-next = "2"

aes-gcm = "0.10"
argon2 = "0.5"
password-hash = "0.5"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
zeroize = "1.5"
tauri-plugin-shell = "2"
fs_extra = "1.3.0"
